[build-system]
requires = ["setuptools>=72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnnl-dopf-admm"
version = "0.1.0"
description = "OEDISI Distribution Optimal Power Flow Federate (DOPF) using relaxed ADMM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"setuptools==72.1.0",
	"helics==3.4.0",
	"helics-apps==3.4.0",
	"pydantic>=1.9,<3.0",
	"python-multipart",
	"uvicorn",
	"fastapi",
	"pyarrow",
	"geopy",
	"scipy",
	"cvxpy",
	"matplotlib",
	"plotly",
	"numpy",
	"pandas",
	"OpenDSSDirect.py[extras]==0.7.0",
	"boto3",
	"xarray",
	"oedisi>=2.0,<3.0",
	"bokeh",
]

[project.scripts]
admm-federate-server = "admm_federate.server:main"
admm-federate-sim = "admm_federate.opf_federate:main"

[project.optional-dependencies]
dev = [
	"black>=24.0.0",
	"ruff>=0.6.0",
]
test = [
	"pytest>=8.0.0",
	"pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
